# 0g-da-encoder

./: Cargo.toml  README.md
crates/amt/: Cargo.toml
crates/amt/src/: lib.rs  proofs.rs  verify_params.rs
crates/amt/src/blob/: encode.rs
crates/amt/src/prove_params/: generate.rs
crates/encoder/: Cargo.toml
crates/encoder/src/amt/: slice.rs
crates/encoder/src/encoder/: blob.rs  slice.rs
crates/ppot2ark/: Cargo.toml
crates/recovery/: Cargo.toml
crates/recovery/benches/: recover.rs
crates/recovery/src/: utils.rs
grpc/benches/: deferred_signer.rs  encoder.rs  process_data.rs  signer.rs
